Replace deprecated templates.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareversion_related_cves.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareversion_related_cves.html
@@ -1,4 +1,4 @@
-{% extends 'dcim/softwareversion_retrieve.html' %}
+{% extends 'generic/object_retrieve.html' %}
 {% load helpers %}
 
 {% block title %}{{ block.super }} - Related CVEs{% endblock %}
