--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareversion_related_cves.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwareversion_related_cves.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-sm col-md col-lg">
+        <div class="col-md col-lg col-xl">
             {% include "utilities/obj_table.html" with table=relatedcves_table table_template="panel_table.html" heading="Related CVEs" %}
         </div>
     </div>
